--- a/express/.env.example
+++ b/express/.env.example
@@ -1,2 +1,4 @@
+BIND_ADDRESS=0.0.0.0
+BIND_PORT=8080
 ETHEREUM_NODE=mainnet.infura.io/v3/<YOUR_API_KEY>
 ETHEREUM_ACCOUNT=64_CHARACTER_ETHEREUM_PRVIATE_KEY_GOES_HERE
