--- a/express/package.json
+++ b/express/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "author": "Graham Perich <graham@fluidity.io>",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha index.test.js"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
+    "@airswap/maker-kit": "^1.0.1",
+    "@airswap/order-utils": "^0.3.6",
+    "bignumber.js": "^9.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "ethers": "^4.0.39",
     "express": "^4.17.1",
     "jayson": "^3.1.2",
     "winston": "^3.2.1"
