--- a/zeit/package.json
+++ b/zeit/package.json
@@ -9,9 +9,9 @@
     "types": "tsc",
     "lint": "eslint . --ext .ts,.tsx"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@airswap/maker-kit": "^1.0.1",
+    "@airswap/maker-kit": "^1.0.2",
     "@airswap/order-utils": "^0.3.5",
     "@airswap/swap": "^2.2.2",
     "@now/node": "^1.1.2",
