--- a/zeit/now.json
+++ b/zeit/now.json
@@ -1,5 +1,19 @@
 {
   "name": "maker",
   "version": 2,
-  "routes": [{ "src": "/", "dest": "/api/index.ts" }]
+  "env": {
+    "ETHEREUM_ACCOUNT": "ETHEREUM_ACCOUNT"
+  },
+  "routes": [
+    {
+      "src": "/",
+      "methods": ["POST", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+        "Access-Control-Allow-Credentials": "true"
+      },
+      "dest": "/api/index.ts"
+    }
+  ]
 }
