--- a/zeit/package.json
+++ b/zeit/package.json
@@ -15,6 +15,9 @@
     "@airswap/order-utils": "^0.3.5",
     "@airswap/swap": "^2.2.2",
     "@now/node": "^1.1.2",
+    "body-parser": "^1.19.0",
+    "connect": "^3.7.0",
+    "cors": "^2.8.5",
     "ethers": "^4.0.39",
     "jayson": "^3.1.2",
     "typescript": "^3.7.2",
