--- a/zeit/package.json
+++ b/zeit/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "prettier:run-all": "prettier --write \"src/**/*.{ts,tsx}\"",
     "types": "tsc",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "price-server": "node pricingServer.js"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -18,10 +19,10 @@
     "@airswap/order-utils": "0.3.12",
     "@airswap/swap": "3.3.5",
     "@now/node": "^1.1.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
-    "ethers": "^4.0.39",
     "jayson": "^3.1.2",
     "typescript": "^3.7.2",
     "winston": "^3.2.1"
@@ -30,10 +31,10 @@
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "express": "^4.17.1",
     "prettier": "^1.19.1"
   }
 }
