--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maker-kit-example-zeit-now",
+  "name": "airswap-maker-example-zeit",
   "version": "0.0.1",
   "description": "An example maker for AirSwap using ZEIT (https://docs.airswap.io)",
   "main": "api/index.ts",
@@ -10,7 +10,8 @@
   "scripts": {
     "prettier:run-all": "prettier --write \"src/**/*.{ts,tsx}\"",
     "types": "tsc",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "yarn mocha handlers.test.js"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "mocha": "^6.2.2",
     "prettier": "^1.19.1"
   }
 }
