--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@airswap/maker-kit": "1.0.14",
-    "@airswap/order-utils": "0.3.12",
+    "@airswap/order-utils": "0.3.15",
     "@airswap/swap": "3.3.5",
     "@now/node": "^1.1.2",
+    "bignumber.js": "^9.0.0",
     "body-parser": "^1.19.0",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
