--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "prettier:run-all": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "mock-price-server": "node mockPricingServer.js",
     "types": "tsc",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "yarn mocha handlers.test.js"
@@ -18,6 +19,7 @@
     "@airswap/order-utils": "0.3.15",
     "@airswap/swap": "3.3.5",
     "@now/node": "^1.1.2",
+    "axios": "^0.19.0",
     "bignumber.js": "^9.0.0",
     "body-parser": "^1.19.0",
     "connect": "^3.7.0",
@@ -35,6 +37,7 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "express": "^4.17.1",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1"
   }
