--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@airswap/order-utils": "0.3.18",
     "@airswap/swap": "4.3.5",
+    "@airswap/tokens": "^0.1.4",
     "@now/node": "^1.1.2",
     "axios": "^0.19.0",
     "bignumber.js": "^9.0.0",
