--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@airswap/order-utils": "0.3.18",
-    "@airswap/swap": "4.3.5",
-    "@airswap/tokens": "^0.1.4",
+    "@airswap/order-utils": "0.3.20",
+    "@airswap/swap": "5.4.7",
+    "@airswap/tokens": "0.1.4",
     "@now/node": "^1.1.2",
     "axios": "^0.19.0",
     "bignumber.js": "^9.0.0",
